<resources>
    <string name="app_name">MyProfile</string>
    <string name="my_groups">My Groups</string>
    <string name="revision_map">Revision Map</string>
    <string name="upprofile">upprofile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageview1">imageView1</string>
    <string name="imageview2">imageView2</string>
    <string name="imageview3">imageView3</string>
    <string name="profile">profile</string>
    <string name="message1">message1</string>
    <string name="message2">message2</string>
    <string name="message3">message3</string>
    <string name="elasri_smail">Elasri Smail</string>
</resources>
