<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rectangle"
            android:contentDescription="@string/upprofile" />

        <ImageView
            android:layout_width="74dp"
            android:layout_height="68dp"
            android:layout_gravity="start|bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile11" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/elasri_smail"
            android:textColor="#FFFFFF" />

    </FrameLayout>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tablayout"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab1"
            android:text="@string/my_groups" />


        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tab2"
            android:text="@string/revision_map" />

    </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

