<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:contentDescription="@string/imageview1"
        app:srcCompat="@drawable/rectangle1"
        tools:srcCompat="@drawable/ellipse2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:contentDescription="@string/imageview2"
        app:srcCompat="@drawable/rectangle1"
        tools:srcCompat="@drawable/ellipse2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:contentDescription="@string/imageview3"
        app:srcCompat="@drawable/rectangle1"
        tools:srcCompat="@drawable/ellipse2" />

</LinearLayout>